@@ -757,7 +757,7 @@ EXPORT_SPEC int UpnpInit(
  *     \li \c UPNP_E_INVALID_INTERFACE: IfName is invalid or does not
  *             have a valid IPv4 or IPv6 addresss configured.
  */
-#ifdef ENABLE_IPV6
+#ifdef UPNP_ENABLE_IPV6
 EXPORT_SPEC int UpnpInit2( 
 	/*! The interface name to use by the UPnP SDK operations.
 	 * Examples: "eth0", "xl0", "Local Area Connection", \c NULL to
@@ -816,7 +816,7 @@ EXPORT_SPEC unsigned short UpnpGetServerPort(void);
  *		related requests.
  *	\li On error: 0 is returned if \b UpnpInit has not succeeded.
  */
-#ifdef ENABLE_IPV6
+#ifdef UPNP_ENABLE_IPV6
 EXPORT_SPEC unsigned short UpnpGetServerPort6(void);
 #endif
 /*!
@@ -844,7 +844,7 @@ EXPORT_SPEC char *UpnpGetServerIpAddress(void);
  * 		listening for UPnP related requests.
  * 	\li On error: \c NULL is returned if \b UpnpInit has not succeeded.
  */
-#ifdef ENABLE_IPV6
+#ifdef UPNP_ENABLE_IPV6
 EXPORT_SPEC char *UpnpGetServerIp6Address(void);
 
 EXPORT_SPEC char *UpnpGetServerUlaGuaIp6Address(void);
